# gtk-layout-inspector

./: Cargo.toml
.github/workflows/: ci.yml
src/: lib.rs  output.rs  server.rs  traverse.rs
