[package]
name = "gtk-layout-inspector"
version = "0.1.0"
edition = "2024"
description = "Layout debugging tools for GTK4 applications - enables programmatic UI inspection and interaction"
license = "MIT"

[dependencies]
gtk4 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.tokio]
version = "1"
features = ["sync", "rt", "time", "net", "io-util"]
optional = true

[dependencies.peercred-ipc]
path = "../peercred-ipc"
optional = true

[dependencies.glob]
version = "0.3"
optional = true

[dependencies.image]
version = "0.25"
optional = true

[dependencies.base64]
version = "0.22"
optional = true

[dependencies.libc]
version = "0.2"
optional = true

[features]
default = []
server = ["tokio", "peercred-ipc", "glob", "image", "base64", "libc"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
